--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <script src="js/whisp.js"></script>
 </head>
 <body>
-  <button id="test-button"></button>
+  <button id="test-button">Hit me</button>
+
   <script type="text/javascript">
     $('#test-button').click(function() {
       navigator.notification.alert('Testerello', function() {}, 'Alertie', 'Cocks');
